[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitadataview"
version = "0.1.0"
description = "Query VitaTesting SQL Server table DbMaster01.dbo.VitaTestData"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
]

[project.scripts]
vitadataview = "vitadataview.cli:app"

[tool.setuptools]
packages = ["vitadataview"]
