[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitadataview"
version = "0.1.0"
description = "Query VitaTesting SQL Server table DbMaster01.dbo.VitaTestData"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "python-tds>=1.15",
  "pyOpenSSL>=23.0",
  "pyodbc>=5.0.0",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
]

[project.scripts]
vitadataview = "vitadataview.cli:app"
vitadataview-web = "vitadataview.webapp:main"

[tool.setuptools]
packages = ["vitadataview"]
